# hlsl-specs

./: .gitignore  .gitmodules  AIToolPolicy.md  README.md  SUPPORT.md  Semantic index assignment
.github/: pr-labels.yml  update_proposal_front_matter.py
.github/ISSUE_TEMPLATE/: agenda_item.md  feature_request.md  proposal.md  spec.md
.github/workflows/: hugo.yml  jekyll-gh-pages.yml  pr-description-checker.yml  pr-labeler.yml
docs/: Contact.md  DesignConsiderations.md  DesignMeeting.md  DesignMeetingAgreement.txt  DesignMeetingTerms.txt  HLSL202x.md  Process.md  _index.md
docs/DesignMeetingMinutes/: 2025-01-21.md  2025-02-04.md  2025-02-18.md  2025-03-18.md  2025-04-01.md  2025-04-15.md  2025-04-29.md  2025-05-27.md  2025-06-10.md  2025-06-24.md  2025-07-08.md  2025-07-22.md  2025-09-02.md  2025-09-16.md  2025-09-30.md  2025-10-14.md  2025-11-11.md  2025-11-13.md  2025-11-25.md  2026-01-20.md  Template.md  _index.md  index.md
proposals/: 00002-cxx-attributes.md  0001-hlsl-namespace.md  0002-cxx-attributes.md  0003-numeric-constants.md  0004-unions.md  0005-strict-initializer-lists.md  0006-limited-pointers.md  0006-reference-types.md  0007-const-instance-methods.md  0007-const-member-functions.md  0007-constructors.md  0008-non-member-operator-overloading.md  0008-uninitialized-resources.md  0009-math-modes.md  0010-const-instance-methods.md  0010-vk-buffer-ref.md  0011-inline-spirv.md  0012-psv0-entry-name.md  0013-alignas.md  0013-expanded-comparison-sampling.md  0013-semantic-index-assignment.md  0013-wave-size-range.md  0014-expanded-comparison-sampling.md  0014-wave-size-range.md  0015-extended-command-info.md  0016-c-interface-compiler-library.md  0017-conforming-literals.md  0018-work-graphs.md  0019-mesh-nodes.md  0020-hlsl-202x-202y.md  0021-default-function-linkage.md  0021-root-signature-in-clang.md  0021-semantic-index-assignment.md  0021-vk-coop-matrix.md  0022-hlsl-loop-unroll-factor.md  0022-validating-resource-container-elements.md  0023-cxx11-base.md  0023-opacity-micromaps.md  0023-scalar-constant-buffer-layout.md  0024-opacity-micromaps.md  (+88 more)
proposals/0016-assets/: compile-compute-shader-breakdown.md
proposals/NNNN/: group-wave-index-background.md
proposals/infra/: INF-0001-availability-diagnostics.md  INF-0002-binding-resource-binding-diagnostics.md  INF-0002-root-signature-in-clang.md  INF-0003-packoffset.md  INF-0004-binding-resource-binding-diagnostics.md  INF-0004-inproc-outofproc-compiler-library-support.md  INF-0004-register-types-and-diagnostics.md  INF-0004-resources.md  (+17 more)
reports/: Overload-Resolution.md
specs/language/: CMakeLists.txt  basic.tex  classes.tex  conversions.tex  declarations.tex  expressions.tex  glossary.tex  hlsl.tex  introduction.tex  lex.tex  macros.tex  overloading.tex  placeholders.tex  resources.tex  statements.tex  template.html
specs/language/assets/: style.css
website/: hugo.toml
(+10 files in other folders)
